# raytracing_cpu

./: CMakeLists.txt  README.md  brouillon.cpp
data/: config.xml  scene.xml  spheres.xml
src/: a.out  light.hpp  main.cpp  mat4.hpp  math.hpp  mesh.hpp  object.hpp  plane.cpp  plane.hpp  ray.cpp  ray.hpp  sphere.cpp  sphere.hpp  test.cpp  texture.hpp  tools.hpp  triangle.cpp  triangle.hpp  trianglemesh.cpp  trianglemesh.hpp  vec3.hpp
